k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: static-website
  name: html-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: html-app
  template:
    metadata:
      labels:
        app: html-app
    spec:
      containers:
      - name: sample-static-app
        image: static-app-1
        resources:
          limits:
            memory: "500MB"
            cpu: "500m"
        ports:
        - containerPort: 80
